# NPuzzle

./: 3puzzle.txt  3puzzle2.txt  4puzzle  4puzzle.txt  4puzzle2.txt  CMakeLists.txt  Grid.cpp  Grid.hpp  Makefile  Node.cpp  Node.hpp  Puzzle.cpp  Puzzle.hpp  README.md  a.out  bla.txt  bla2.txt  createpuzzle.cpp  getinput.cpp  main.cpp  npuzzle  readfile.cpp  solvable.cpp  utils.hpp  vla.txt
a.out.dSYM/Contents/Resources/DWARF/: a.out
puzzles/solvable/: 100puzzle.txt  12puzzle.txt  17puzzle.txt  25puzzle.txt  3puzzle.txt  3puzzle1.txt  3puzzle2.txt  4puzzle.txt  4puzzle1.txt  5puzzle.txt
puzzles/unsolvable/: 13puzzle.txt  18puzzle.txt  3puzzle.txt  4puzzle.txt  5puzzle.txt  6puzzle.txt  7puzzle.txt  8puzzle.txt
test/: CMakeLists.txt  invalid.cpp  main.cpp  valid.cpp
